# AI-RAG-In-Depth

./: .gitignore  README.md
Arize-Phoenix/: L3_modified.ipynb  L5_with_arize_phoenix.ipynb  L7_add_evaluations_to_phoenix.ipynb  L9_trajectory_analysis.ipynb  README.md  helper.py  pyproject.toml
LangGraph/: README.md
LangGraph/LangGraph_DeepAgent/: DeepAgent_LOD.md  DeepAgent_vs_ReAct.md
LangGraph/LangGraph_Human_in_the_loop/: .env.example  .gitignore  PLAN.md  pyproject.toml
LangGraph/LangGraph_Human_in_the_loop/data/: metadata.json
LangGraph/LangGraph_Human_in_the_loop/data/documents/: ACM_annual_report_2024.txt  ACM_earnings_call_Q4_2024.txt  TFI_annual_report_2024.txt
LangGraph/LangGraph_Human_in_the_loop/mcp_server/: Dockerfile  pyproject.toml  server.py
LangGraph/LangGraph_Human_in_the_loop/src/: main.py
LangGraph/LangGraph_Human_in_the_loop/src/agent/: graph.py  output.py  prompts.yaml  runner.py  state.py
LangGraph/LangGraph_Human_in_the_loop/src/config/: mcp_tools_settings.py  settings.py
LangGraph/LangGraph_Human_in_the_loop/src/mcp_tools/: README.md  client.py
LangGraph/LangGraph_Human_in_the_loop/src/telemetry/: setup.py
LangGraph/LangGraph_Human_in_the_loop/src/tools/: calculator.py  data_loader.py  document_parser.py
LangGraph/LangGraph_Human_in_the_loop/tests/: PLAN.md
LangGraph/LangGraph_Prototype/: .env.example  Readme.md  __init__.py  config.py  graph.py  main.py  memory.py  nodes.py  pyproject.toml  tools.py
LangGraph/LangGraph_ReAct/: .env.example  .gitignore  PLAN.md  README.md  docker-compose.yml  pyproject.toml
LangGraph/LangGraph_ReAct/ab_testing/: PLAN.md  README.md  compare_runs.py  evaluate_run.py  evaluators.py
LangGraph/LangGraph_ReAct/ab_testing/ground_truth/: CASE-2024-001.json
LangGraph/LangGraph_ReAct/data/: cases.json  customers.json  transactions.json
LangGraph/LangGraph_ReAct/src/: main.py
LangGraph/LangGraph_ReAct/src/agent/: __init__.py  graph.py  output.py  prompts.yaml  state.py
LangGraph/LangGraph_ReAct/src/config/: settings.py
LangGraph/LangGraph_ReAct/src/infrastructure/: __init__.py  bedrock.py
LangGraph/LangGraph_ReAct/src/telemetry/: __init__.py  setup.py
LangGraph/LangGraph_ReAct/src/tools/: __init__.py  analyzer.py  calculator.py  data_loader.py
LangGraph_DeepAgent/: DeepAgent_LOD.md
MCPServers/: Claude-to-git.md
MCPServers/MCP-Server/: AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md
MCPServers/MCP-Server/.claude/agents/: python.md
MCPServers/MCP-Server/.claude/rules/: python-mcp.md
MCPServers/MCP-Server/.claude/skills/adr/: SKILL.md
MCPServers/MCP-Server/.claude/skills/caveman/: SKILL.md
MCPServers/MCP-Server/.claude/skills/explore-python/: SKILL.md
MCPServers/MCP-Server/adr/: 260630-MCP-server-agent.md  260630-mcp-foundation.md
MCPServers/MCP-Server/src/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  pyproject.toml
MCPServers/MCP-Server/src/src/mcp_server/: app_context.py  main.py  mcp_app.py
MCPServers/MCP-Server/src/src/mcp_server/config/: settings.py
MCPServers/MCP-Server/src/src/mcp_server/routers/: mcp.py
MCPServers/MCP-Server/src/src/mcp_server/telemetry/: setup.py
MCPServers/MCP-Server/src/tests/: conftest.py  helpers.py  mcp_app_test.py
OWASP/: test_chunk.txt
advanced-topics/: Advanced Retrieval & Re-ranking.md  LangGraph_Advanced.md
design-patterns/: 1_constrained_decoding_openai.ipynb  2_grammar_pattern_4_examples.ipynb  2_true_logits_masking_llama.ipynb  grammar.md  indexing_raptor_hierarchical_indexing.md  insurance_claim.json  logits_masking.md  readme.md  reverse-neutralization.md  style-transfer.md
security/: readme.md
