[project]
name = "financial-mcp-server"
version = "0.1.0"
description = "Standalone MCP server exposing financial document and calculator tools"
requires-python = ">=3.12"

dependencies = [
    "mcp>=1.0.0",
    "pypdf>=4.0.0",
]

[tool.uv]
# Shares the workspace .venv with the root project (no separate venv needed)