[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "fastmcp>=2.0",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
]

[project.optional-dependencies]
telemetry = [
    "opentelemetry-exporter-otlp-proto-http>=1.25",
    "openinference-semantic-conventions>=0.1",
    "arize-phoenix-otel>=0.5",
]

[dependency-groups]
dev = [
    "ruff>=0.5",
    "mypy>=1.14",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx2>=0.28",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # Depends() in default args

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.13"
strict = true
# fastmcp doesn't ship stubs yet
[[tool.mypy.overrides]]
module = ["fastmcp.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
python_files = ["*_test.py"]
pythonpath = ["src"]
testpaths = ["tests"]
